# clearancekit

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
clearancekit/: __init__.py  __main__.py  cli.py  errors.py  session.py
clearancekit/_compat/: nodriver.py
clearancekit/_internal/: clicker.py
clearancekit/challenges/: constants.py  detectors.py  pipeline.py  solvers.py  types.py
clearancekit/challenges/templates/: README.md
clearancekit/display/: __init__.py  backend.py  xvfb.py
clearancekit/transports/: base.py  nodriver.py
examples/: basic.py  caller_managed_pool.py  custom_solver.py
tests/integration/: test_nodriver_driver.py
tests/unit/: test_challenges_types.py  test_cli.py  test_clicker.py  test_compat.py  test_detectors.py  test_display.py  test_errors.py  test_pipeline.py  test_public_api.py  test_session.py  test_solvers.py  test_transports_base.py  test_types.py
