[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clearancekit"
version = "0.1.0"
description = "Pluggable Cloudflare bypass via real Chromium (powered by nodriver)"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "nodriver>=0.50,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
clearancekit = "clearancekit.cli:main"

[project.urls]
Repository = "https://github.com/zen1f/clearancekit"

[tool.setuptools.packages.find]
include = ["clearancekit*"]

[tool.setuptools.package-data]
clearancekit = ["py.typed", "challenges/templates/README.md"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "D", "ANN"]
ignore = [
    "D100",    # module docstring not required
    "D104",    # package __init__ docstring not required
    "D107",    # __init__ docstring not required
    "ANN401",  # Any allowed (evaluate() returns JSON-any)
]

[tool.ruff.lint.per-file-ignores]
"clearancekit/errors.py" = ["N818"]  # project convention: CF<Cause> prefix, no `Error` suffix
"tests/**" = ["D", "ANN"]
"examples/**" = ["D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
reportPrivateUsage = false

[tool.mypy]
strict = true
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["nodriver.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
